--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 </head>
 
 <body>
-    <div class="top-nav">
-        <i class="fas fa-bars"></i>
-        <i class="fas fa-search" aria-hidden="true"></i>
-        <img class="top-nav__img"
-            src="https://theme.zdassets.com/theme_assets/968999/3f343ffc604a6c839e31d3f052b78abfa34ab588.png"
-            alt="NYT logo">
-        <button class="btn top-nav__button">SUBSCRIBE NOW</button>
-        <button class="btn top-nav__button">LOG IN</button>
+    <div class="border">
+        <div class="top-nav">
+            <div class="top-nav__i-flex">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-search" aria-hidden="true"></i>
+            </div>
+            <img class="top-nav__img"
+                src="https://theme.zdassets.com/theme_assets/968999/3f343ffc604a6c839e31d3f052b78abfa34ab588.png"
+                alt="NYT logo">
+            <div class="top-nav__btn-flex">
+                <button class="btn top-nav__button">LOG IN</button>
+                <button class="btn top-nav__button">SUBSCRIBE NOW</button>
+            </div>
+        </div>
     </div>
 
     <main class="main">
@@ -39,21 +45,17 @@
         </section>
         <section class="main__main-section">
             <header class="main__info">
-                <h3 class="main__info__author"></h3>
+                <h3 class="main__info__author">By Debbus Overbye</h3>
                 <div class="main__info__flex">
-                    <p></p>
-                    <div class="main__info__flex">
-                        <div class="social">
-                            <img src="https://lh3.googleusercontent.com/proxy/JwA22M4tBfztm2gh1u4JfN771bVF_TO3w5Vzd0AjaUvcQtuFQZyOTOtDxobOWoHFCK23KRfM9NmAe2l-YmfMwuY9SKh3I31PFfr7OZmv1n1rzrDur6c"
-                                alt="facebook" class="main__info__flex__img">
-                            <img src="https://bitpeaks.com/images/twitter.png" alt="twitter"
-                                class="main__info__flex__img">
-                            <img src="https://fa.vut.cz/stud/rusarova/logo_mail.png" alt="mail"
-                                class="main__info__flex__img">
-                            <img src="https://pngimg.com/uploads/share/share_PNG22.png" alt="share"
-                                class="main__info__flex__img">
-                        </div>
-                        <button class="btn main__info__flex__btn"></button>
+                    <p class="small-grey">March 17, 2014</p>
+                    <div class="social">
+                        <img src="https://lh3.googleusercontent.com/proxy/JwA22M4tBfztm2gh1u4JfN771bVF_TO3w5Vzd0AjaUvcQtuFQZyOTOtDxobOWoHFCK23KRfM9NmAe2l-YmfMwuY9SKh3I31PFfr7OZmv1n1rzrDur6c"
+                            alt="facebook" class="main__info__flex__img">
+                        <img src="https://bitpeaks.com/images/twitter.png" alt="twitter" class="main__info__flex__img">
+                        <img src="https://fa.vut.cz/stud/rusarova/logo_mail.png" alt="mail"
+                            class="main__info__flex__img">
+                        <img src="https://pngimg.com/uploads/share/share_PNG22.png" alt="share"
+                            class="main__info__flex__img">
                     </div>
                 </div>
             </header>
@@ -127,33 +129,49 @@
                     in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers
                     submitted to The Astrophysical Journal.</p>
                 <article class="main__story-part3__img">
+                    <h3>Theory of Inflation</h3>
+                    <p class="small-grey">Astronomers have found evidence to support the theory of inflation, which
+                        explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang
+                        13.8 billion years ago.</p>
                     <img src="https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png"
                         alt="stars">
-                    <p class="abs small">THE UNIVERSE is just under 14 billion years old. From our position in the Milky
-                        Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's
+                    <p class="abs small">THE UNIVERSE is just under 14 billion years old. From our position in the
+                        Milky
+                        Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But
+                        there's
                         a mystery. Wherever we look, the universe has an even temperature.</p>
-                    <p class="abs small">NOT ENOUGH TIME The universe is not old enough for light to have traveled the
-                        vast distance from one side of the universe to the other, and there has not been enough time for
+                    <p class="abs small">NOT ENOUGH TIME The universe is not old enough for light to have traveled
+                        the
+                        vast distance from one side of the universe to the other, and there has not been enough time
+                        for
                         scattered patches of hot and cold to mix into an even temperature.</p>
-                    <p class="abs small">DISTANT COFFEE At a smaller scale, imagine using a telescope to look a mile in
+                    <p class="abs small">DISTANT COFFEE At a smaller scale, imagine using a telescope to look a mile
+                        in
                         one direction. You see a coffee cup, and from the amount of steam, you can estimate its
                         temperature and how much it has cooled. </p>
-                    <p class="abs small">COFFEE EVERYWHERE Now turn around and look a mile in the other direction. You
-                        see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a
+                    <p class="abs small">COFFEE EVERYWHERE Now turn around and look a mile in the other direction.
+                        You
+                        see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you
+                        see a
                         similar cup in every direction, you might want to look for another explanation.</p>
-                    <p class="abs small">STILL NOT ENOUGH TIME There has not been enough time to carry coffee cups from
+                    <p class="abs small">STILL NOT ENOUGH TIME There has not been enough time to carry coffee cups
+                        from
                         place to place before they get cold. But if all the coffee cups were somehow filled from a
                         single coffee pot, all at the same time, that might explain their even temperature.</p>
-                    <p class="abs small">INFLATION solves this problem. The theory proposes that, less than a trillionth
+                    <p class="abs small">INFLATION solves this problem. The theory proposes that, less than a
+                        trillionth
                         of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny
-                        ripples in the violently expanding energy field eventually grew into the large-scale structures
+                        ripples in the violently expanding energy field eventually grew into the large-scale
+                        structures
                         of the universe.</p>
                     <p class="abs small">FLUCTUATION Astronomers have now detected evidence of these ancient
-                        fluctuations in swirls of polarized light in the cosmic background radiation, which is energy
+                        fluctuations in swirls of polarized light in the cosmic background radiation, which is
+                        energy
                         left over from the early universe. These are gravitational waves predicted by Einstein.</p>
                     <p class="abs small">EXPANSION Returning to our coffee, imagine a single, central pot expanding
                         faster than light and cooling to an even temperature as it expands. That is something like
-                        inflation. And the structure of the universe mirrors the froth and foam of the original pot.</p>
+                        inflation. And the structure of the universe mirrors the froth and foam of the original pot.
+                    </p>
                     <div class="line"></div>
                     <p class="author">By LARRY BUCHANAN and JONATHAN CORUM</p>
                 </article>
@@ -539,5 +557,6 @@
         </ul>
     </footer>
 </body>
+<img src="" alt="">
 
 </html>
